--- a/web/views/Comprobante/Comprobante.xhtml
+++ b/web/views/Comprobante/Comprobante.xhtml
@@ -12,7 +12,7 @@
 
             <ui:define name="content">
 
-                <!--Adquiriendo tipoCuentas al cargar la pagina-->
+                <!--Adquiriendo detalle al cargar la pagina-->
                 #{comprobanteBean.listarComprobanteDetalle()}
                 
                 <h:form id="formNuevoComprobante">
@@ -36,19 +36,19 @@
                                         
                                         <p:outputLabel for="fechaRealizacion" value="Fecha de Realizacion"/>
                                         <p:calendar id="fechaRealizacion" navigator="true" showButtonPanel="false" placeholder="yyyy/MM/dd" 
-                                                    locale="es"  pattern="yyyy/MM/dd" required="true"/>
+                                                    locale="es"  pattern="yyyy/MM/dd"/>
 
                                         <p:outputLabel for="usuario" value="Usuario "/>
-                                        <p:inputText id="usuario"  required="true"/>
+                                        <p:inputText id="usuario"  />
 
 
                                         <p:outputLabel for="descripcion" value="Descripcion "/>
-                                        <p:inputText id="descripcion" required="true"/>
+                                        <p:inputText id="descripcion" />
 
 
                                         <p:outputLabel for="fechaContable" value="Fecha Contable"/>
                                         <p:calendar id="fechaContable"  placeholder="yyyy/MM/dd" 
-                                                    locale="es"  pattern="yyyy/MM/dd" required="true"/>
+                                                    locale="es"  pattern="yyyy/MM/dd" />
                                     </p:panelGrid>
                                 </p:panel>
 
@@ -91,24 +91,20 @@
                                             <h:outputText value="#{index + 1}"/>
                                         </p:column>
                                         
-                                        <p:column headerText="corre">
-                                            <h:outputText value="#{row.idCuenta2}"/>
+                                        <p:column headerText="Codigo Cuenta">
+                                            <h:outputText value="#{row.codigoCuenta}"/>
                                         </p:column>
                                         
+                                        <p:column headerText="Descripcion">
+                                            <h:outputText value="#{row.descripcionCuenta}"/>
+                                        </p:column>
+                                            
                                         <p:column headerText="Monto">
                                             <h:outputText value="#{row.monto}"/>
                                         </p:column>
-
+                                        
                                         <p:column headerText="Accion">
                                             <h:outputText value="#{row.accion}"/>
-                                        </p:column>
-                                        
-                                        <p:column headerText="Cuenta">
-                                            <h:outputText value="#{row.idComprobante2}"/>
-                                        </p:column>
-                                        
-                                        <p:column headerText="Cuenta">
-                                            <h:outputText value="#{row.idCuenta2}"/>
                                         </p:column>
                                         
                                     </p:dataTable>
