--- a/src/java/com/reportes/rpt.jrxml
+++ b/src/java/com/reportes/rpt.jrxml
@@ -44,20 +44,6 @@ from cuenta a]]>
 	<columnHeader>
 		<band height="17" splitType="Stretch">
 			<staticText>
-				<reportElement mode="Opaque" x="17" y="1" width="69" height="15" forecolor="#000000" backcolor="#FFFFFF" uuid="07ff195a-561d-4c43-a6eb-0d1363c31fc5"/>
-				<box>
-					<pen lineWidth="1.0"/>
-					<topPen lineWidth="1.0"/>
-					<leftPen lineWidth="1.0"/>
-					<bottomPen lineWidth="1.0"/>
-					<rightPen lineWidth="1.0"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="7" isBold="true"/>
-				</textElement>
-				<text><![CDATA[ID CUENTA]]></text>
-			</staticText>
-			<staticText>
 				<reportElement mode="Opaque" x="86" y="1" width="82" height="15" forecolor="#000000" backcolor="#FFFFFF" uuid="54a1084f-fff8-4209-a2cb-5ab1418b7cc8"/>
 				<box>
 					<pen lineWidth="1.0"/>
@@ -113,30 +99,57 @@ from cuenta a]]>
 				</textElement>
 				<text><![CDATA[TIPO]]></text>
 			</staticText>
+			<staticText>
+				<reportElement mode="Opaque" x="17" y="1" width="69" height="15" forecolor="#000000" backcolor="#FFFFFF" uuid="07ff195a-561d-4c43-a6eb-0d1363c31fc5"/>
+				<box>
+					<pen lineWidth="1.0"/>
+					<topPen lineWidth="1.0"/>
+					<leftPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="7" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ID CUENTA]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="13" splitType="Stretch">
+		<band height="12" splitType="Stretch">
 			<textField>
 				<reportElement x="17" y="0" width="69" height="12" uuid="33d2f3c6-13eb-4cc4-b095-cbe6c13d42bf"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{idCuenta}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="86" y="0" width="82" height="12" uuid="fb6cdedc-ef7c-404a-9618-59ff60052109"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{codigo}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="168" y="0" width="164" height="12" uuid="94b3a049-ae02-4e23-a9ac-f9a5891b2cb1"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="332" y="0" width="82" height="12" uuid="2445664c-21b2-4671-8ed4-ec21e4b622cb"/>
-				<textElement textAlignment="Center"/>
+				<textElement textAlignment="Center">
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{cuentaPadre}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="414" y="0" width="113" height="12" uuid="5b385b46-5098-4626-b01f-7b86bd407587"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
 			</textField>
 		</band>
