--- a/web/views/Comprobante/Comprobante.xhtml
+++ b/web/views/Comprobante/Comprobante.xhtml
@@ -23,6 +23,8 @@
                                     <p:menuitem id="itmNuevo" value="Nuevo" icon="ui-icon-document" action="#{comprobanteBean.resetNew()}" update="@form" style="color: white; font-weight: bold"/>
                                     <p:menuitem id="itmGuardar"  value="Guardar" icon="ui-icon-disk " style="color: white; font-weight: bold"
                                                 update="@form" action="#{comprobanteBean.insertarComprobante()}"/>
+                                    <p:menuitem id="itmAplicarS"  value="Aplicar" icon="ui-icon-transfer-e-w" style="color: white; font-weight: bold"
+                                                update="@form" />
                                 </p:menubar>
                                 <p:defaultCommand target="btnDefautl"/>
                                 <p:commandButton id="btnDefautl" process="@none" global="false" style="display:none;"/>
@@ -83,6 +85,7 @@
                                 </p:panel>
 
                                 <p:panel id="TableDetalle" style="width: 100%; margin-top:5px;">
+                                    <p:remoteCommand name="updateTotales" update="tblDetalle" actionListener="#{comprobanteBean.updateTotales()}" ignoreAutoUpdate="true" />
                                     <p:dataTable id="tblDetalle" value="#{comprobanteBean.lstDetalle}" var="row" 
                                                  widgetVar="tblDetalle" 
                                                  rowIndexVar="index">
@@ -106,12 +109,15 @@
                                             <h:outputText value="#{row.accion}"/>
                                         </p:column>
                                         
-                                        <p:column headerText="Eliminar" >
-                                            <p:commandButton value="Eliminar" oncomplete="PF('dialogEliminarDetalle').show();"
-                                                             update="@form">
-                                                <f:setPropertyActionListener target="#{comprobanteBean.comDe}" value="#{row}"/>
-                                            </p:commandButton>
-                                        </p:column>
+                                        <p:columnGroup type="footer">
+                                            <p:row id="row">
+                                                <p:column colspan="3" style="text-align: right" footerText="Debe:" />
+                                                <p:column style="width: 100%; text-align: right;" footerText="#{comprobanteBean.debe}"/>
+                                                <p:column style="text-align: right" footerText="Haber:" />
+                                                    
+                                                <p:column style="width: 100%; text-align: right;" footerText="#{comprobanteBean.haber}"/>
+                                            </p:row>
+                                        </p:columnGroup>
                                         
                                     </p:dataTable>
                                 </p:panel>
@@ -155,20 +161,7 @@
                         </p:panel>
                     </p:dialog>
                     
-                    <h:form id="formEliminarSaldo">
-                        <p:dialog id="digEliminarSaldo" widgetVar="dialogEliminarDetalle" resizable="false" showEffect="explode"
-                                  hideEffect="explode" modal="true">
-
-                            <h:outputText value=" ¿Desea eliminar el detalle de la transaccion? "/>
-                            <p:commandButton value="Si" actionListener="#{comprobanteBean.eliminarCD()}"
-                                            
-                                             oncomplete="PF('dialogEliminarDetalle').hide();"/>
-
-                            <p:commandButton value="No"
-                                             oncomplete="PF('dialogEliminarSaldo').hide();"/>
-                        </p:dialog>
-
-                    </h:form>
+                    
                 </h:form>
             </ui:define>
         </ui:composition>
