Pagina de bienvenida terminada

--- a/web/resources/css/default.css
+++ b/web/resources/css/default.css
@@ -27,3 +27,13 @@ a:link:hover, a:visited:hover  {
   font-weight : bold;
   text-decoration : underline;
 }
+
+h3{
+    font-family: Arial, "Arial CE", "Lucida Grande CE", lucida, "Helvetica CE", sans-serif;
+    font-size:  20px;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+    color: #000000;
+    text-align: center;
+}
