Balance de comprobacion agregado.

--- a/web/views/Saldos/Saldo.xhtml
+++ b/web/views/Saldos/Saldo.xhtml
@@ -39,11 +39,11 @@
                             <p:outputLabel value="#{sl.anio}"/>
                         </p:column>
 
-                        <p:column headerText="Saldo Inicial">
+                        <p:column headerText="Total Debe">
                             <p:outputLabel value="#{sl.saldoInicial}"/>
                         </p:column>
 
-                        <p:column headerText="Saldo Actual">
+                        <p:column headerText="Total Haber">
                             <p:outputLabel value="#{sl.saldoActual}"/>
                         </p:column>
 
