--- a/web/views/Cuenta/Cuenta.xhtml
+++ b/web/views/Cuenta/Cuenta.xhtml
@@ -9,7 +9,7 @@
     <body>
 
         <ui:composition template="./../../plantilla/plantilla.xhtml">
-
+            <title>Cuentas</title>
             <ui:define name="content">
 
                 <!--Adquiriendo tipoCuentas al cargar la pagina-->
@@ -26,7 +26,7 @@
                     <p:commandButton value="Nuevo Cuenta" actionListener="#{cuentaBean.prepararNuevoCuenta()}"
                                      oncomplete="PF('dialogNuevoCuenta').show();" 
                                      update=":formNuevoCuenta"/> 
-                   
+
                 </h:form>
 
                 <h:form id="formulario">
@@ -62,7 +62,7 @@
 
                         <p:column headerText="Eliminar">
 
-                            <p:commandButton value="Eliminar" actionListener="#{cuentaBean.eliminar()}" update="datos" immediate="true">
+                            <p:commandButton value="Eliminar" actionListener="#{cuentaBean.eliminar(cu)}"  update="datos" immediate="true">
                                 <p:confirm header="Confirmation" message="¿Desea eliminar la cuenta?" icon="ui-icon-alert" />
                             </p:commandButton>
 
@@ -164,10 +164,6 @@
                         </h:panelGrid>
                     </h:form>
                 </p:dialog>
-
-
-
-
 
             </ui:define>
 
